@@ -5,6 +5,7 @@
 - BOB tool now recognises the underground (PageDown/PageUp to switch)
 - Effect renders now updated on prop/tree change (lights can now be added/removed in-game)
 - Prop/tree position highlighting is dimmed when shift is pressed and disabled while Alt is pressed
+- Random prop list now refreshes if displayed when random prop setup panel is closed
 
 
 Version 0.9.0.4 -
